--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   	<div class="container"> 
   		<div class="cardwhite">
   	      <h1>Bonjour, je suis Audran 🤠</h1>
-  	      <img src="imageaudranrond.png" class="img-circle" alt="Audran">
+  	      <img src="images/imageaudranrond.png" class="img-circle" alt="Audran">
   	      <p> 
   	        Je suis étudiant à Audencia Bachelor en spécialisation "Management Commercial". Dans la vie, j'aime le sport 🏃🏻, la musique 💿 (je mix ahaha) ainsi que sortir avec mes amis (on va souvent boire une bière après les cours 🍻). Je réalise ce site pour le séminaire de Culture Numérique. 🥳
   	      </p>
@@ -35,7 +35,7 @@
   	    </div>
   	    <div class="cardwhite">
   	      <h2>Bénévolat 🧑🏻‍🤝‍🧑🏻</h2>
-  	      <img src="logobds.png" width="150px" alt="Audran">
+  	      <img src="images/logobds.png" width="150px" alt="Audran">
   	      <p>
   		    Je fais vivre l'école en étant responsable des partenariats dans l'association du Bureau des Sports "Olynx'pique" d'Audencia Bachelor ⚽️
   	      </p>
